added: songs_cardview player_menu necessary icons
modified:
player layout

removed tool bar logo

--- a/app/src/main/res/layout/songs_fragment.xml
+++ b/app/src/main/res/layout/songs_fragment.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
+        android:background="@color/colorGrey"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
