--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,25 +20,26 @@
 
     <SeekBar
         android:id="@+id/seekBar"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.83" />
+        app:layout_constraintVertical_bias="0.80" />
 
     <ImageButton
         android:id="@+id/pause"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
+        android:onClick="pause"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintVertical_bias="0.80"
         app:srcCompat="@drawable/pause_icon" />
 
     <ImageButton
@@ -45,10 +47,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
+        android:onClick="previous"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintVertical_bias="0.80"
         app:srcCompat="@drawable/previous_icon" />
 
     <ImageButton
@@ -56,6 +59,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
+        android:onClick="next"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/repeat"
         app:layout_constraintStart_toEndOf="@+id/pause"
@@ -68,10 +72,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
+        android:onClick="shuffle"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/previous"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintVertical_bias="0.80"
         app:srcCompat="@drawable/shuffle_icon" />
 
     <ImageButton
@@ -79,6 +84,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
+        android:onClick="repeat"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintStart_toEndOf="@+id/next"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -89,6 +95,7 @@
         android:id="@+id/collapseIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:onClick="collapse"
         android:background="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -98,6 +105,7 @@
         android:id="@+id/vertical3Dots"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:onClick="playerMenuPopup"
         android:background="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -107,12 +115,47 @@
         android:id="@+id/favourite"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:onClick="fav"
         android:background="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/heart_outline_icon" />
+
+    <TextView
+        android:id="@+id/songName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="songName"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/collapseIcon" />
+
+    <TextView
+        android:id="@+id/com_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+        app:layout_constraintEnd_toStartOf="@+id/seekBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/seekBar" />
+
+    <TextView
+        android:id="@+id/rem_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/seekBar"
+        app:layout_constraintTop_toTopOf="@+id/seekBar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
