added: songs_cardview player_menu necessary icons
modified:
player layout

removed tool bar logo

corrected:
errors

--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -34,7 +34,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
-        android:onClick="pause"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -49,7 +48,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
-        android:onClick="previous"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -62,7 +60,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
-        android:onClick="next"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintStart_toEndOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -75,8 +72,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
-        android:contentDescription="@string/to_shufle"
-        android:onClick="shuffle"
+        android:contentDescription="@string/to_shuffle"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/previous"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -88,7 +84,6 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/colorWhite"
-        android:onClick="repeat"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintStart_toEndOf="@+id/next"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -100,7 +95,6 @@
         android:id="@+id/collapseIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="collapse"
         android:background="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -111,7 +105,6 @@
         android:id="@+id/vertical3Dots"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:onClick="playerMenuPopup"
         android:background="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -122,7 +115,6 @@
         android:id="@+id/favourite"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:onClick="fav"
         android:background="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/pause"
         app:layout_constraintEnd_toEndOf="parent"
