--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -9,13 +9,13 @@
         android:id="@+id/imageView"
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:contentDescription="@string/image_of_the_song"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@android:drawable/divider_horizontal_bright"
-        android:contentDescription="@string/image_of_the_song" />
+        app:srcCompat="@android:drawable/divider_horizontal_bright" />
 
     <SeekBar
         android:id="@+id/seekBar"
