added: card-view for playlist

--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/semiTransparent">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/image_of_the_song"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        app:srcCompat="@android:drawable/divider_horizontal_bright"
-        android:contentDescription="@string/image_of_the_song" />
+        app:layout_constraintVertical_bias=".3"
+        app:srcCompat="@drawable/reputation" />
 
     <SeekBar
         android:id="@+id/seekBar"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.8"
+        android:thumbTint="@color/colorBlack" />
 
     <ImageButton
         android:id="@+id/pause"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,7 +47,7 @@
         android:id="@+id/previous"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -57,7 +59,7 @@
         android:id="@+id/next"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintStart_toEndOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -69,7 +71,7 @@
         android:id="@+id/shuffle"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/to_shuffle"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toStartOf="@+id/previous"
@@ -81,7 +83,7 @@
         android:id="@+id/repeat"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintStart_toEndOf="@+id/next"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -93,7 +95,7 @@
         android:id="@+id/collapseIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/collapse_icon"
@@ -103,7 +105,7 @@
         android:id="@+id/vertical3Dots"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/vertical_3dots_icon"
@@ -113,7 +115,7 @@
         android:id="@+id/favourite"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:background="@color/colorWhite"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
