--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#C3BEBE</color>
     <color name="semiTransparent">#1Affffff</color>
+    <color name="semiTransparent50">#80ffffff</color>
 </resources>
