--- a/app/src/main/res/layout/playlist_gridview.xml
+++ b/app/src/main/res/layout/playlist_gridview.xml
@@ -12,7 +12,7 @@
         android:padding="10dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/playlistImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="5dp"
@@ -20,7 +20,7 @@
             android:layout_marginBottom="5dp" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/playlistName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView"
