--- a/app/src/main/res/layout/songs_cardview.xml
+++ b/app/src/main/res/layout/songs_cardview.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/semiTransparent"
+    app:cardBackgroundColor="@color/card_selector"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
