added: buttons to grid layout id to recycler view

--- a/app/src/main/res/layout/album_fragment.xml
+++ b/app/src/main/res/layout/album_fragment.xml
@@ -9,10 +9,14 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="657dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/albumRecyclerView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:scrollbars="vertical"
+        android:background="@android:color/transparent"
+        android:padding="4dp"/>
 </LinearLayout>
