--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="?attr/colorPrimaryDark"
+    android:background="?attr/colorPrimary"
     tools:ignore="ExtraText">
 
     <com.google.android.material.tabs.TabLayout
@@ -31,8 +31,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/tabLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar">
+        app:layout_constraintTop_toBottomOf="@+id/toolBar"
+        app:layout_constraintVertical_bias="0.0">
 
     </androidx.viewpager.widget.ViewPager>
 
@@ -49,6 +51,8 @@
         app:title="@string/app_name"
         app:titleTextColor="?attr/colorPrimary"
         app:titleMarginStart="40dp"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
